# crib_hand_helper

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: crib_hand_helper.cpp
include/crib_hand_helper/: card.h  constants.h  hand_counter.h  hand_statistics.h
src/: card.cpp  hand_counter.cpp  hand_statistics.cpp
test/: test_card.cpp  test_hand_counter.cpp  test_hand_statistics.cpp
